Let QScrollBar take care of the wheel event

BUG:239070

svn path=/trunk/KDE/kdelibs/kate/; revision=1188021